# grabbit

./: .commitlintrc.json  .gitignore  .lintstagedrc.json  README.md  eslint.config.ts  package.json  pnpm-lock.yaml  prettier.config.ts  sonar-project.properties  tsconfig.base.json
.github/workflows/: build.yml  ci.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main-capability.json
apps/desktop/src-tauri/src/: constants.rs  lib.rs  main.rs  models.rs  state.rs
apps/desktop/src-tauri/src/binaries/: mod.rs
apps/desktop/src-tauri/src/commands/: download.rs  mod.rs  queue.rs
apps/desktop/src-tauri/src/downloader/: mod.rs  progress.rs  ytdlp.rs
apps/desktop/src-tauri/src/server/: http.rs
apps/desktop/src/components/: DownloadQueue.tsx  QueueItem.tsx  Settings.tsx
apps/desktop/src/hooks/: useQueue.ts
apps/desktop/src/lib/: tauri.ts
apps/extension/: components.json  package.json  tsconfig.json  wxt.config.ts
apps/extension/.output/chrome-mv3-dev/: background.js  (+2 more)
apps/extension/components/: DownloadButton.tsx  FormatPicker.tsx  ProgressBar.tsx  QualitySelector.tsx  StatusMessage.tsx  mp3-bitrate-selector.tsx  subtitle-track-selector.tsx
apps/extension/entrypoints/: background.ts  content.ts
apps/extension/hooks/: useCurrentTab.ts  useDesktopApp.ts  useDownload.ts
apps/extension/lib/: constants.ts  ipc.ts  youtube.ts
apps/extension/types/: index.ts  wxt-imports.d.ts
scripts/: fetch-binaries.ts
(+12 files in other folders)
